# GEM

./: .gitignore  .nf-core.yml  CHANGELOG.md  CITATIONS.md  Deneme.py  GenomeToPathways.py  KEGG_brite_menu.py  KEGG_brite_veri_cekme.py  KEGG_guncel_reaksiyon.py  KEGG_merge.py  KEGG_merge_compund.py  NucleotideToReaction.py  README.md  UniProtTest.py  ara_rapor_irem.md  biochemical_analysis_results.xlsx  combined_results_single_sheet.xlsx  e.coli_prokka_reaksiyonlar_sonuc.xlsx  ec_number_to_reaction2.xlsx  ecj_JW0001_analizi.xlsx  ecnumberikisheet.xlsx  get_ec_number_from_uniprot.py  kegg_reactions_Arginine.xlsx  kegg_reactions_glycolysis_1760812995.xlsx  kegg_reactions_glycolysis_1760817185.xlsx  kegg_reaksiyon.py  main.nf  main1.nf  map00010_Glycolysis_stokiyometri.xlsx  modules.json  nextflow.config  nextflow_schema.json  pathways_to_reaction.py  pyproject.toml  reaction_stoichiometry_calculator.py  redoks_tep.py  ro-crate-metadata.json  samplesheet.csv  test_matrix.xlsx  ~$combined_results_single_sheet.xlsx
FastqFiles/: ec1_S1_L001_R1_001.fastq.gz:Zone.Identifier  ec1_S1_L001_R2_001.fastq.gz:Zone.Identifier
MCV_Folder/: control.py
Nextflow/: main.nf  nextflow.config
SeperatedFiles/: gbParser.py  goTermFinder.py  idMapping.py  main.py
SeperationTest/: annotation_results2.xlsx  keggAPI.py  main.py  uniprotGO.py  uniprotMapping.py
TestDirectory/: Blastresult.xml  blastp_result.xml  kegg_reactions_glycolysis.xlsx  ncbi_blast_result.xml
TezOzetleri/: ara_rapor_doga.docx  ara_rapor_doga.md
assets/: adaptivecard.json  email_template.html  email_template.txt  (+5 more)
(+70 files in other folders)
