[project]
name = "gems"
version = "0.1.0"
description = ""
authors = [
    {name = "DogaTestere",email = "testeredogayasemen2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython (>=1.85,<2.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "bioservices (>=1.12.1,<2.0.0) ; python_version >= \"3.13\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
